@@ -90,22 +90,24 @@ return function(database, metadata)
         num_item_ingredients = num_item_ingredients + 1
       end
     end
-    for crafter_name in pairs(global.prototypes.crafter) do
-      local crafter_data = database.entity[crafter_name]
-      local fluidbox_counts = metadata.crafter_fluidbox_counts[crafter_name] or { inputs = 0, outputs = 0 }
-      if
-        (crafter_data.ingredient_limit or 255) >= num_item_ingredients
-        and crafter_data.recipe_categories_lookup[category]
-        and fluidbox_counts.inputs >= fluids.ingredients
-        and fluidbox_counts.outputs >= fluids.products
-      then
-        local crafting_time = math.round(prototype.energy / crafter_data.crafting_speed, 0.01)
-        data.made_in[#data.made_in + 1] = {
-          class = "entity",
-          name = crafter_name,
-          amount_ident = util.build_amount_ident({ amount = crafting_time, format = "format_seconds_parenthesis" }),
-        }
-        crafter_data.can_craft[#crafter_data.can_craft + 1] = { class = "recipe", name = name }
+    for _, crafters in pairs({ global.prototypes.character, global.prototypes.crafter }) do
+      for crafter_name in pairs(crafters) do
+        local crafter_data = database.entity[crafter_name]
+        local fluidbox_counts = metadata.crafter_fluidbox_counts[crafter_name] or { inputs = 0, outputs = 0 }
+        if
+          (crafter_data.ingredient_limit or 255) >= num_item_ingredients
+          and crafter_data.recipe_categories_lookup[category]
+          and fluidbox_counts.inputs >= fluids.ingredients
+          and fluidbox_counts.outputs >= fluids.products
+        then
+          local crafting_time = math.round(prototype.energy / crafter_data.crafting_speed, 0.01)
+          data.made_in[#data.made_in + 1] = {
+            class = "entity",
+            name = crafter_name,
+            amount_ident = util.build_amount_ident({ amount = crafting_time, format = "format_seconds_parenthesis" }),
+          }
+          crafter_data.can_craft[#crafter_data.can_craft + 1] = { class = "recipe", name = name }
+        end
       end
     end
 
